--- a/javaFx exercises/classTest/src/main/resources/org/example/classtest/bandeiraView.fxml
+++ b/javaFx exercises/classTest/src/main/resources/org/example/classtest/bandeiraView.fxml
@@ -3,16 +3,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="306.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.classtest.BandeiraController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="418.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.classtest.BandeiraController">
    <children>
       <Label layoutX="126.0" layoutY="21.0" text="Bandeira" />
-      <TextField fx:id="txt_pais" layoutX="74.0" layoutY="66.0" promptText="País" />
-      <TextField fx:id="txt_cor" layoutX="74.0" layoutY="100.0" promptText="Cores" />
-      <TextField fx:id="txt_desc" layoutX="74.0" layoutY="141.0" promptText="Descrição" />
-      <Button fx:id="btn_balancar" layoutX="18.0" layoutY="202.0" mnemonicParsing="false" onAction="#balancarBandeira" prefHeight="25.0" prefWidth="112.0" text="Balançar" />
-      <Button fx:id="btn_desc" layoutX="167.0" layoutY="202.0" mnemonicParsing="false" text="Mostrar Descrição" />
-      <Button fx:id="btn_curiosidade" layoutX="93.0" layoutY="249.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" text="Curiosidade" />
+      <TextField fx:id="txt_pais" layoutX="75.0" layoutY="184.0" promptText="País" />
+      <TextField fx:id="txt_cor" layoutX="75.0" layoutY="218.0" promptText="Cores" />
+      <TextField fx:id="txt_desc" layoutX="75.0" layoutY="259.0" promptText="Descrição" />
+      <Button fx:id="btn_balancar" layoutX="19.0" layoutY="320.0" mnemonicParsing="false" onAction="#balancarBandeira" prefHeight="25.0" prefWidth="112.0" text="Balançar" />
+      <Button fx:id="btn_desc" layoutX="168.0" layoutY="320.0" mnemonicParsing="false" text="Mostrar Descrição" />
+      <Button fx:id="btn_curiosidade" layoutX="94.0" layoutY="367.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" text="Curiosidade" />
+      <ImageView fitHeight="146.0" fitWidth="209.0" layoutX="46.0" layoutY="58.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Imagens%20Exemplos/Bandeira.jpg" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
