--- a/javaFx exercises/classTest/src/main/resources/org/example/classtest/cadernoView.fxml
+++ b/javaFx exercises/classTest/src/main/resources/org/example/classtest/cadernoView.fxml
@@ -3,16 +3,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="306.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.classtest.CadernoController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="435.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.classtest.CadernoController">
    <children>
       <Label layoutX="126.0" layoutY="21.0" text="Caderno" />
-      <TextField fx:id="txt_cor" layoutX="74.0" layoutY="66.0" promptText="Cor" />
-      <TextField fx:id="txt_pagina" layoutX="74.0" layoutY="100.0" promptText="Páginas" />
-      <TextField fx:id="txt_escrever" layoutX="74.0" layoutY="141.0" promptText="Adicionar Texto" />
-      <Button fx:id="btn_escrever" layoutX="18.0" layoutY="202.0" mnemonicParsing="false" onAction="#escreverNoCaderno" prefHeight="25.0" prefWidth="112.0" text="Escrever" />
-      <Button fx:id="btn_remover" onAction="#removerPagina" layoutX="167.0" layoutY="202.0" mnemonicParsing="false" text="Remover Pagina" />
-      <Button fx:id="btn_fechar" onAction="#fecharJanela" layoutX="93.0" layoutY="249.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" text="Fechar" />
+      <TextField fx:id="txt_cor" layoutX="79.0" layoutY="196.0" promptText="Cor" />
+      <TextField fx:id="txt_pagina" layoutX="79.0" layoutY="230.0" promptText="Páginas" />
+      <TextField fx:id="txt_escrever" layoutX="79.0" layoutY="271.0" promptText="Adicionar Texto" />
+      <Button fx:id="btn_escrever" layoutX="23.0" layoutY="332.0" mnemonicParsing="false" onAction="#escreverNoCaderno" prefHeight="25.0" prefWidth="112.0" text="Escrever" />
+      <Button fx:id="btn_remover" layoutX="172.0" layoutY="332.0" mnemonicParsing="false" onAction="#removerPagina" text="Remover Pagina" />
+      <Button fx:id="btn_fechar" layoutX="98.0" layoutY="379.0" mnemonicParsing="false" onAction="#fecharJanela" prefHeight="25.0" prefWidth="112.0" text="Fechar" />
+      <ImageView fitHeight="113.0" fitWidth="149.0" layoutX="86.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Imagens%20Exemplos/Caderno.jpg" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
