--- a/javaFx exercises/classTest/src/main/resources/org/example/classtest/frutaView.fxml
+++ b/javaFx exercises/classTest/src/main/resources/org/example/classtest/frutaView.fxml
@@ -3,16 +3,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="306.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.classtest.FrutaController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.classtest.FrutaController">
    <children>
       <Label layoutX="136.0" layoutY="20.0" text="Fruta" />
-      <TextField fx:id="txt_pais" layoutX="74.0" layoutY="66.0" promptText="Nome" />
-      <TextField fx:id="txt_cor" layoutX="74.0" layoutY="100.0" promptText="Tamanho" />
-      <TextField fx:id="txt_desc" layoutX="74.0" layoutY="141.0" promptText="Tipo" />
-      <Button fx:id="btn_amadurecer" layoutX="18.0" layoutY="202.0" mnemonicParsing="false" onAction="#amadurecerFruta" prefHeight="25.0" prefWidth="112.0" text="Amadurecer" />
-      <Button fx:id="btn_apodrecer" layoutX="167.0" layoutY="202.0" mnemonicParsing="false" onAction="#apodrecerFruta" prefHeight="25.0" prefWidth="112.0" text="Apodrecer" />
-      <Button fx:id="btn_semear" layoutX="93.0" layoutY="249.0" mnemonicParsing="false" onAction="#semear" prefHeight="25.0" prefWidth="112.0" text="Semear" />
+      <TextField fx:id="txt_pais" layoutX="75.0" layoutY="200.0" promptText="Nome" />
+      <TextField fx:id="txt_cor" layoutX="75.0" layoutY="234.0" promptText="Tamanho" />
+      <TextField fx:id="txt_desc" layoutX="75.0" layoutY="275.0" promptText="Tipo" />
+      <Button fx:id="btn_amadurecer" layoutX="19.0" layoutY="336.0" mnemonicParsing="false" onAction="#amadurecerFruta" prefHeight="25.0" prefWidth="112.0" text="Amadurecer" />
+      <Button fx:id="btn_apodrecer" layoutX="168.0" layoutY="336.0" mnemonicParsing="false" onAction="#apodrecerFruta" prefHeight="25.0" prefWidth="112.0" text="Apodrecer" />
+      <Button fx:id="btn_semear" layoutX="94.0" layoutY="383.0" mnemonicParsing="false" onAction="#semear" prefHeight="25.0" prefWidth="112.0" text="Semear" />
+      <ImageView fitHeight="118.0" fitWidth="142.0" layoutX="79.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Imagens%20Exemplos/Fruta.jpg" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
