--- a/javaFx exercises/classTest/src/main/resources/org/example/classtest/oculosView.fxml
+++ b/javaFx exercises/classTest/src/main/resources/org/example/classtest/oculosView.fxml
@@ -3,16 +3,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="306.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.classtest.OculosController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.classtest.OculosController">
    <children>
       <Label layoutX="126.0" layoutY="21.0" text="Óculos" />
-      <TextField fx:id="txt_pais" layoutX="74.0" layoutY="66.0" promptText="Cor" />
-      <TextField fx:id="txt_cor" layoutX="74.0" layoutY="104.0" promptText="Material" />
-      <TextField fx:id="txt_desc" layoutX="74.0" layoutY="141.0" promptText="Tipo" />
-      <Button fx:id="btn_limpar" layoutX="18.0" layoutY="202.0" mnemonicParsing="false" onAction="#limparOculos" prefHeight="25.0" prefWidth="112.0" text="Limpar" />
-      <Button fx:id="btn_ajustar" layoutX="167.0" layoutY="202.0" mnemonicParsing="false" onAction="#ajustarOculos" prefHeight="25.0" prefWidth="112.0" text="Ajustar" />
-      <Button fx:id="btn_trocar" layoutX="93.0" layoutY="249.0" mnemonicParsing="false" onAction="#trocarLentes" prefHeight="25.0" prefWidth="112.0" text="Trocar Lentes" />
+      <TextField fx:id="txt_pais" layoutX="75.0" layoutY="212.0" promptText="Cor" />
+      <TextField fx:id="txt_cor" layoutX="75.0" layoutY="250.0" promptText="Material" />
+      <TextField fx:id="txt_desc" layoutX="75.0" layoutY="287.0" promptText="Tipo" />
+      <Button fx:id="btn_limpar" layoutX="19.0" layoutY="348.0" mnemonicParsing="false" onAction="#limparOculos" prefHeight="25.0" prefWidth="112.0" text="Limpar" />
+      <Button fx:id="btn_ajustar" layoutX="168.0" layoutY="348.0" mnemonicParsing="false" onAction="#ajustarOculos" prefHeight="25.0" prefWidth="112.0" text="Ajustar" />
+      <Button fx:id="btn_trocar" layoutX="94.0" layoutY="395.0" mnemonicParsing="false" onAction="#trocarLentes" prefHeight="25.0" prefWidth="112.0" text="Trocar Lentes" />
+      <ImageView fitHeight="105.0" fitWidth="158.0" layoutX="71.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Imagens%20Exemplos/Óculos.jpg" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
