--- a/javaFx exercises/classTest/src/main/resources/org/example/classtest/passaroView.fxml
+++ b/javaFx exercises/classTest/src/main/resources/org/example/classtest/passaroView.fxml
@@ -3,16 +3,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="306.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.classtest.PassaroController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.classtest.PassaroController">
    <children>
       <Label layoutX="126.0" layoutY="21.0" text="Pássaro" />
-      <TextField fx:id="txt_especie" layoutX="74.0" layoutY="66.0" promptText="Espécie" />
-      <TextField fx:id="txt_cor" layoutX="75.0" layoutY="103.0" promptText="Nome" />
-      <TextField fx:id="txt_desc" layoutX="74.0" layoutY="141.0" promptText="Tamanho" />
-      <Button fx:id="btn_comer" layoutX="18.0" layoutY="202.0" mnemonicParsing="false" onAction="#comer" prefHeight="25.0" prefWidth="112.0" text="Comer" />
-      <Button fx:id="btn_cantar" layoutX="167.0" layoutY="202.0" mnemonicParsing="false" onAction="#cantar" prefHeight="25.0" prefWidth="112.0" text="Cantar" />
-      <Button fx:id="btn_voar" layoutX="93.0" layoutY="249.0" mnemonicParsing="false" onAction="#voar" prefHeight="25.0" prefWidth="112.0" text="Voar" />
+      <TextField fx:id="txt_especie" layoutX="75.0" layoutY="208.0" promptText="Espécie" />
+      <TextField fx:id="txt_cor" layoutX="76.0" layoutY="245.0" promptText="Nome" />
+      <TextField fx:id="txt_desc" layoutX="75.0" layoutY="283.0" promptText="Tamanho" />
+      <Button fx:id="btn_comer" layoutX="19.0" layoutY="344.0" mnemonicParsing="false" onAction="#comer" prefHeight="25.0" prefWidth="112.0" text="Comer" />
+      <Button fx:id="btn_cantar" layoutX="168.0" layoutY="344.0" mnemonicParsing="false" onAction="#cantar" prefHeight="25.0" prefWidth="112.0" text="Cantar" />
+      <Button fx:id="btn_voar" layoutX="94.0" layoutY="391.0" mnemonicParsing="false" onAction="#voar" prefHeight="25.0" prefWidth="112.0" text="Voar" />
+      <ImageView fitHeight="112.0" fitWidth="182.0" layoutX="58.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Imagens%20Exemplos/passaro.jpg" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
