--- a/javaFx exercises/classTest/src/main/resources/org/example/classtest/camisaView.fxml
+++ b/javaFx exercises/classTest/src/main/resources/org/example/classtest/camisaView.fxml
@@ -18,7 +18,7 @@
       <Button fx:id="btn_lavar" layoutX="94.0" layoutY="359.0" mnemonicParsing="false" onAction="#lavarCamisa" prefHeight="25.0" prefWidth="112.0" text="Lavar" />
       <ImageView fitHeight="107.0" fitWidth="156.0" layoutX="72.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../Imagens%20Exemplos/Camisa.jpg" />
+            <Image url="@../assets/Camisa.jpg" />
          </image>
       </ImageView>
    </children>
