--- a/javaFx exercises/classTest/src/main/resources/org/example/classtest/carroView.fxml
+++ b/javaFx exercises/classTest/src/main/resources/org/example/classtest/carroView.fxml
@@ -19,7 +19,7 @@
       <TextField fx:id="txt_pais1" layoutX="75.0" layoutY="212.0" promptText="Modelo" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="49.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../Imagens%20Exemplos/Carro.jpg" />
+            <Image url="@../assets/Carro.jpg" />
          </image>
       </ImageView>
    </children>
