--- a/javaFx exercises/classTest/src/main/resources/org/example/classtest/oculosView.fxml
+++ b/javaFx exercises/classTest/src/main/resources/org/example/classtest/oculosView.fxml
@@ -18,7 +18,7 @@
       <Button fx:id="btn_trocar" layoutX="94.0" layoutY="395.0" mnemonicParsing="false" onAction="#trocarLentes" prefHeight="25.0" prefWidth="112.0" text="Trocar Lentes" />
       <ImageView fitHeight="105.0" fitWidth="158.0" layoutX="71.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../Imagens%20Exemplos/Óculos.jpg" />
+            <Image url="@../assets/Óculos.jpg" />
          </image>
       </ImageView>
    </children>
