--- a/javafx-project/classTest/src/main/resources/org/example/classtest/oculosView.fxml
+++ b/javafx-project/classTest/src/main/resources/org/example/classtest/oculosView.fxml
@@ -12,9 +12,9 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.classtest.OculosController">
    <children>
       <Label layoutX="126.0" layoutY="21.0" text="Óculos" />
-      <TextField fx:id="txt_pais" layoutX="75.0" layoutY="212.0" promptText="Cor" />
-      <TextField fx:id="txt_cor" layoutX="75.0" layoutY="250.0" promptText="Material" />
-      <TextField fx:id="txt_desc" layoutX="75.0" layoutY="287.0" promptText="Tipo" />
+      <TextField fx:id="txt_cor" layoutX="75.0" layoutY="212.0" promptText="Cor" />
+      <TextField fx:id="txt_material" layoutX="75.0" layoutY="250.0" promptText="Material" />
+      <TextField fx:id="txt_tipo" layoutX="75.0" layoutY="287.0" promptText="Tipo" />
       <Button fx:id="btn_limpar" layoutX="287.0" layoutY="395.0" mnemonicParsing="false" onAction="#limparOculos" prefHeight="25.0" prefWidth="112.0" text="Limpar" />
       <Button fx:id="btn_ajustar" layoutX="471.0" layoutY="395.0" mnemonicParsing="false" onAction="#ajustarOculos" prefHeight="25.0" prefWidth="112.0" text="Ajustar" />
       <Button fx:id="btn_trocar" layoutX="88.0" layoutY="395.0" mnemonicParsing="false" onAction="#trocarLentes" prefHeight="25.0" prefWidth="112.0" text="Trocar Lentes" />
@@ -23,12 +23,12 @@
             <Image url="@../assets/Óculos.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="btn_cadastrar" layoutX="88.0" layoutY="350.0" mnemonicParsing="false" onAction="#trocarLentes" prefHeight="25.0" prefWidth="112.0" text="Cadastrar" />
-      <TableView layoutX="287.0" layoutY="27.0" prefHeight="323.0" prefWidth="385.0">
+      <Button fx:id="btn_cadastrar" layoutX="88.0" layoutY="350.0" mnemonicParsing="false" onAction="#cadastrarOculos" prefHeight="25.0" prefWidth="112.0" text="Cadastrar" />
+      <TableView fx:id="tableOculos" layoutX="287.0" layoutY="27.0" prefHeight="323.0" prefWidth="385.0">
         <columns>
-          <TableColumn prefWidth="128.0" text="Cor" />
-          <TableColumn prefWidth="123.0" text="Material" />
-            <TableColumn prefWidth="133.0" text="Tipo" />
+          <TableColumn fx:id="colCor" prefWidth="128.0" text="Cor" />
+          <TableColumn fx:id="colMaterial" prefWidth="123.0" text="Material" />
+            <TableColumn fx:id="colTipo" prefWidth="133.0" text="Tipo" />
         </columns>
       </TableView>
    </children>
