--- a/javafx-project/classTest/src/main/resources/org/example/classtest/passaroView.fxml
+++ b/javafx-project/classTest/src/main/resources/org/example/classtest/passaroView.fxml
@@ -13,8 +13,8 @@
    <children>
       <Label layoutX="126.0" layoutY="21.0" text="Pássaro" />
       <TextField fx:id="txt_especie" layoutX="75.0" layoutY="208.0" promptText="Espécie" />
-      <TextField fx:id="txt_cor" layoutX="76.0" layoutY="245.0" promptText="Nome" />
-      <TextField fx:id="txt_desc" layoutX="75.0" layoutY="283.0" promptText="Tamanho" />
+      <TextField fx:id="txt_nome" layoutX="76.0" layoutY="245.0" promptText="Nome" />
+      <TextField fx:id="txt_tamanho" layoutX="75.0" layoutY="283.0" promptText="Tamanho" />
       <Button fx:id="btn_comer" layoutX="330.0" layoutY="391.0" mnemonicParsing="false" onAction="#comer" prefHeight="25.0" prefWidth="112.0" text="Comer" />
       <Button fx:id="btn_cantar" layoutX="555.0" layoutY="391.0" mnemonicParsing="false" onAction="#cantar" prefHeight="25.0" prefWidth="112.0" text="Cantar" />
       <Button fx:id="btn_voar" layoutX="90.0" layoutY="391.0" mnemonicParsing="false" onAction="#voar" prefHeight="25.0" prefWidth="112.0" text="Voar" />
@@ -23,12 +23,12 @@
             <Image url="@../assets/passaro.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="btn_cadastrar" layoutX="90.0" layoutY="333.0" mnemonicParsing="false" onAction="#voar" prefHeight="25.0" prefWidth="112.0" text="Cadastrar" />
-      <TableView layoutX="330.0" layoutY="27.0" prefHeight="331.0" prefWidth="414.0">
+      <Button fx:id="btn_cadastrar" layoutX="90.0" layoutY="333.0" mnemonicParsing="false" onAction="#cadastrarPassaro" prefHeight="25.0" prefWidth="112.0" text="Cadastrar" />
+      <TableView fx:id="tablePassaros" layoutX="330.0" layoutY="27.0" prefHeight="331.0" prefWidth="414.0">
         <columns>
-          <TableColumn prefWidth="149.0" text="Espécie" />
-          <TableColumn prefWidth="119.0" text="Nome" />
-            <TableColumn prefWidth="145.0" text="Tamanho" />
+          <TableColumn fx:id="colEspecie" prefWidth="149.0" text="Espécie" />
+          <TableColumn fx:id="colNome" prefWidth="119.0" text="Nome" />
+            <TableColumn fx:id="colTamanho" prefWidth="145.0" text="Tamanho" />
         </columns>
       </TableView>
    </children>
