--- a/javafx-project/classTest/src/main/resources/org/example/classtest/sapatoView.fxml
+++ b/javafx-project/classTest/src/main/resources/org/example/classtest/sapatoView.fxml
@@ -12,9 +12,9 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="454.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.classtest.SapatoController">
    <children>
       <Label layoutX="126.0" layoutY="21.0" text="Sapato" />
-      <TextField fx:id="txt_pais" layoutX="75.0" layoutY="219.0" promptText="Cor" />
-      <TextField fx:id="txt_cor" layoutX="75.0" layoutY="253.0" promptText="Tipo" />
-      <TextField fx:id="txt_desc" layoutX="75.0" layoutY="294.0" promptText="Tamanho" />
+      <TextField fx:id="txt_cor" layoutX="75.0" layoutY="219.0" promptText="Cor" />
+      <TextField fx:id="txt_tipo" layoutX="75.0" layoutY="253.0" promptText="Tipo" />
+      <TextField fx:id="txt_tamanho" layoutX="75.0" layoutY="294.0" promptText="Tamanho" />
       <Button fx:id="btn_trocTamanho" layoutX="295.0" layoutY="402.0" mnemonicParsing="false" onAction="#trocarTamanho" prefHeight="25.0" prefWidth="112.0" text="Trocar Tamanho" />
       <Button fx:id="btn_amarrar" layoutX="485.0" layoutY="402.0" mnemonicParsing="false" onAction="#amarrar" prefHeight="25.0" prefWidth="112.0" text="Amarrar" />
       <Button fx:id="btn_limpar" layoutX="88.0" layoutY="402.0" mnemonicParsing="false" onAction="#limpar" prefHeight="25.0" prefWidth="112.0" text="Limpar" />
@@ -23,12 +23,12 @@
             <Image url="@../assets/sapatos.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="btn_cadastrar" layoutX="93.0" layoutY="351.0" mnemonicParsing="false" onAction="#limpar" prefHeight="25.0" prefWidth="112.0" text="Cadastrar" />
-      <TableView layoutX="295.0" layoutY="41.0" prefHeight="335.0" prefWidth="383.0">
+      <Button fx:id="btn_cadastrar" layoutX="93.0" layoutY="351.0" mnemonicParsing="false" onAction="#cadastrarSapato" prefHeight="25.0" prefWidth="112.0" text="Cadastrar" />
+      <TableView fx:id="tableSapatos" layoutX="295.0" layoutY="41.0" prefHeight="335.0" prefWidth="383.0">
         <columns>
-          <TableColumn prefWidth="131.0" text="Cor" />
-          <TableColumn prefWidth="128.0" text="Tipo" />
-            <TableColumn prefWidth="123.0" text="Tamanho" />
+          <TableColumn fx:id="colCor" prefWidth="131.0" text="Cor" />
+          <TableColumn fx:id="colTipo" prefWidth="128.0" text="Tipo" />
+            <TableColumn fx:id="colTamanho" prefWidth="123.0" text="Tamanho" />
         </columns>
       </TableView>
    </children>
